istio/service_entry_oneagent.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dynatrace-oneagent-hostnames
spec:
  hosts:
  - xhp03489.sprint.dynatracelabs.com
  - sg-us-east-1-18-211-248-143-prod22-virginia.live.ruxit.com
  - sg-us-east-1-34-196-118-31-prod22-virginia.live.ruxit.com
  - sg-us-east-1-34-207-16-42-prod22-virginia.live.ruxit.com
  - sg-us-east-1-54-174-161-61-prod22-virginia.live.ruxit.com 
  - sg-us-east-1-35-172-94-162-prod22-virginia.live.ruxit.com 
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: HTTPS
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dynatrace-oneagent-hostnames
spec:
  hosts:
  - xhp03489.sprint.dynatracelabs.com
  - sg-us-east-1-18-211-248-143-prod22-virginia.live.ruxit.com
  - sg-us-east-1-34-196-118-31-prod22-virginia.live.ruxit.com
  - sg-us-east-1-34-207-16-42-prod22-virginia.live.ruxit.com
  - sg-us-east-1-54-174-161-61-prod22-virginia.live.ruxit.com 
  - sg-us-east-1-35-172-94-162-prod22-virginia.live.ruxit.com 
  tls:
  - match:
    - port: 443
      sni_hosts:
      - xhp03489.sprint.dynatracelabs.com
    route:
    - destination:
        host: xhp03489.sprint.dynatracelabs.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-us-east-1-18-211-248-143-prod22-virginia.live.ruxit.com
    route:
    - destination:
        host: sg-us-east-1-18-211-248-143-prod22-virginia.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-us-east-1-34-196-118-31-prod22-virginia.live.ruxit.com
    route:
    - destination:
        host: sg-us-east-1-34-196-118-31-prod22-virginia.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-us-east-1-34-207-16-42-prod22-virginia.live.ruxit.com
    route:
    - destination:
        host: sg-us-east-1-34-207-16-42-prod22-virginia.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-us-east-1-54-174-161-61-prod22-virginia.live.ruxit.com
    route:
    - destination:
        host: sg-us-east-1-54-174-161-61-prod22-virginia.live.ruxit.com 
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-us-east-1-35-172-94-162-prod22-virginia.live.ruxit.com 
    route:
    - destination:
        host: sg-us-east-1-35-172-94-162-prod22-virginia.live.ruxit.com
        port:
          number: 443
          name: HTTPS
